[package]
name = "p2pflow"
version = "0.0.4"
authors = ["Jonas Bostoen <jonas.bostoen@hotmail.com>"]
edition = "2018"
license = "GPL-2.0 OR BSD-3-Clause"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.14.0"
async-std = "1.10.0"
async-std-resolver = "*"
libc = "0.2"
structopt = "0.3"
ctrlc = "3.1"
object = "0.25"
plain = "0.2"
tui = "0.16"
termion = "1.5"

[build-dependencies]
libbpf-cargo = "0.9.3"

